# aegis

./: .gitignore  CONTRIBUTING.md  Makefile  PLAN.md  README.md  VIEWS.md  aegis_events.py  aegis_proxy.py  aegis_tap.py  aegis_viewer.py  config.py  dphoney.docx  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.streamlit/: config.toml
aegis/: __init__.py  decision.py  events.py  pipeline.py  sdk.py  taint.py
aegis/broker/: __init__.py  handles.py  store.py
aegis/detectors/: __init__.py  base.py  encoding.py  honeytoken.py  ledger.py  normalize.py  secret_pattern.py  tool_call_args.py
aegis/eval/: __init__.py  braintrust.py  report.py  runner.py  scorers.py
aegis/gateway/: __init__.py  app.py
aegis/honeytokens/: __init__.py  generator.py  registry.py
aegis/obs/: __init__.py  trace.py
aegis/policy/: __init__.py  default.yaml  engine.py  modes.py  schema.py
aegis/providers/: __init__.py  base.py  claude.py  mock.py
configs/: blackbox.yaml  default.yaml
dashboard/: __init__.py  app.py  data.py  index.html
detect/dp_honey/: README.md  __init__.py  __main__.py  bigram.py  model_io.py  realism.py  scanner.py
docs/: ASANA_MCP_SETUP.md  EDGE_CASES.md  IMPLEMENTATION_PLAN.md  NIMBUS_METER.md  PRD_credential_exfiltration_proxy.md  PRODUCTION_ROADMAP.md  STATUS.md  USERS.md  USER_PERSONAS_FINDING.md  aegis-runtime-spine.md  aegis_proxy_brief.md  trace-collection-harness.md
docs/brainstorms/: 2026-06-22-dp-honey-detection-eval-requirements.md
docs/plans/: 2026-06-21-001-feat-cift-trained-model-plan.md  2026-06-22-001-feat-dp-honey-detection-eval-plan.md  2026-06-23-001-feat-cift-runtime-hardening-plan.md
docs/residual-review-findings/: codex-trace-collection-harness.md
introspection/: README.md
introspection/data/: detector_results_cift_v3_selector_window_layer_15_calibrated_v1.jsonl  detector_results_cift_v3_selector_window_layer_15_v1.jsonl  detector_results_cift_v4_1_selector_window_layer_15_trained_bundle_v1.jsonl  lineage.json  prompts_dp_honey_lite_v2.jsonl  prompts_dp_honey_lite_v3_policy_windows.jsonl  prompts_dp_honey_lite_v3_selector_windows.jsonl  prompts_dp_honey_lite_v4.jsonl  prompts_dp_honey_lite_v4_1.jsonl  prompts_dp_honey_lite_v4_1_policy_windows.jsonl  prompts_dp_honey_lite_v4_1_selector_windows.jsonl  prompts_dp_honey_lite_v4_policy_windows.jsonl  prompts_dp_honey_lite_v4_selector_windows.jsonl  prompts_dp_honey_runtime_v4_1.jsonl  prompts_dp_honey_runtime_v4_1_selector_windows.jsonl  prompts_dp_honey_runtime_v4_3_sealed.jsonl  prompts_dp_honey_runtime_v4_3_sealed_selector_windows.jsonl  prompts_structured_v1.jsonl  runtime_turns_dp_honey_lite_v3_selector_windows.jsonl  runtime_turns_dp_honey_lite_v4_1_selector_windows.jsonl
introspection/scripts/: ablate_cift_selector_window_features.py  adjudicate_combined_hard_v3_regressions.py  analyze_binary_errors.py  analyze_feature_transfer_errors.py  benchmark_live_cift_runtime.py  calibrate_cift_detector.py  (+30 more)
scripts/: build_cift_dataset.py  calibrate_dp_honey.py  check_import_boundaries.py  eval_dp_honey.py  eval_nimbus.py  fit_cift_stats.py  fit_dp_honey.py  run_dashboard.py  run_demo.py  run_eval.py  run_gateway.py  run_proxy.py  spike_mps.py  train_cift_probe.py  train_nimbus.py
sentinel/: config.py
tests/: test_blackbox.py  test_broker.py  test_cift.py  test_dashboard_data.py  test_dp_honey.py  test_dp_honey_bigram.py  test_dp_honey_cli.py  test_dp_honey_docs.py  test_dp_honey_integration.py  test_dp_honey_model_io.py  test_dp_honey_realism.py  test_dp_honey_scanner.py  test_dp_honey_webui.py  test_dp_honey_webui_http.py  test_edge_cases.py  test_eval.py  test_gateway.py  test_honeytoken.py  test_honeytokens.py  test_integration.py  test_ledger.py  test_nimbus.py  test_orchestrator.py  test_policy.py  test_providers.py  test_schema.py  test_taxonomy.py  test_tool_call_args.py
(+309 files in other folders)
