[project]
name = "aegis"
version = "0.1.0"
description = "Runtime credential defense spine for LLM agents."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
proxy = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]
dp-honey-ui = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "uvicorn>=0.30",
]
dev = [
  "fastapi>=0.111",
  "httpx>=0.27",
  "mypy>=1.13,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
  "uvicorn>=0.30",
]

[project.scripts]
aegis-trace-assignments = "aegis.trace_collection.__main__:main"
aegis-trace-build-records = "aegis.trace_collection.main:record_builder_main"
aegis-trace-seed-inputs = "aegis.trace_collection.main:seed_input_main"
aegis-trace-validate-pairs = "aegis.trace_collection.main:pair_validation_main"
aegis-trace-pair-work-items = "aegis.trace_collection.main:pair_work_item_main"
aegis-trace-build-pair-inputs = "aegis.trace_collection.main:pair_input_builder_main"
dp-honey = "detect.dp_honey.__main__:main"
dp-honey-ui = "detect.dp_honey.webui.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"detect.dp_honey.webui" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests/aegis", "tests/dp_honey"]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=aegis",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true
files = ["src/aegis", "src/detect", "scripts"]
