[project]
name = "aegis"
version = "0.1.0"
description = "Runtime credential-exfiltration defense for LLM agents (SDK + gateway)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Live model provider (gateway can run fully offline on the mock provider without this).
claude = ["anthropic>=0.40"]
# Hosted evaluation trail; eval always writes local JSONL/Markdown without it.
braintrust = ["braintrust>=0.0.150"]
dashboard = ["streamlit>=1.36"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
